--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,23 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Python venv
+venv/
+
+# VS Code Settings
+.vscode/
+
+# Bytecode, Cache & Logfiles
+__pycache__/
+*.py[cod]
+*.log
+
+# Test-Cache
+.cache/
+.pytest_cache/
+
+# IDEs und Systemdateien (optional)
+*.swp
+.DS_Store
+Thumbs.db
